--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Shoot Game</title>
 
     <link rel="stylesheet" href="src/scss/main.scss" />
+    \
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+
+    <link rel="icon" type="image/jpg" href="src/img/logo.jpg" />
 
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 
@@ -54,6 +61,12 @@
                   <li><a class="dropdown__link" href="#6">Polygon</a></li>
                   <li>
                     <a class="dropdown__link" href="#7">Arbitrum Nova</a>
+                  </li>
+                  <li>
+                    <a class="dropdown__link" href="#8">Avalanche</a>
+                  </li>
+                  <li>
+                    <a class="dropdown__link" href="#9">BSC</a>
                   </li>
                 </ul>
               </div>
@@ -202,6 +215,31 @@
           </div>
         </div>
       </section>
+      <footer>
+        <div class="footer-container">
+          <div class="logo">
+            <img src="src/img/logo.jpg" alt="ShootGame logo" />
+          </div>
+          <nav class="footer-menu">
+            <ul>
+              <li><a href="#">Home page</a></li>
+              <li><a href="#">Chains</a></li>
+              <li><a href="#">News</a></li>
+              <li><a href="#">Find game</a></li>
+              <li><a href="#">About us</a></li>
+            </ul>
+          </nav>
+          <div class="social-links">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-discord"></i></a>
+            <a href="#"><i class="fab fa-telegram"></i></a>
+          </div>
+        </div>
+        <div class="copyright">
+          <p>© 2023 ShootGame. All rights reserved.</p>
+        </div>
+      </footer>
     </div>
     <div class="overlay hidden"></div>
   </body>
