Added news section

--- a/index.html
+++ b/index.html
@@ -176,44 +176,100 @@
             </div>
           </div>
           <div class="slider">
-            <div class="slide slide--1">
-              <img
-                src="src/img/img-hero-1.png"
-                class="image-hero"
-                alt="Characters from Illuvium game"
-              />
+            <div class="'slides-container">
+              <div class="slide slide--1">
+                <img
+                  src="src/img/img-hero-1.png"
+                  class="image-hero"
+                  alt="Characters from Illuvium game"
+                />
+              </div>
+              <div class="slide slide--2">
+                <img
+                  src="src/img/img-hero-2.png"
+                  class="image-hero"
+                  alt="Characters from Legends of Elysium game"
+                />
+              </div>
+              <div class="slide slide--3">
+                <img
+                  src="src/img/img-hero-3.png"
+                  class="image-hero"
+                  alt="Characters from Momoguro game"
+                />
+              </div>
+              <div class="slide slide--4">
+                <img
+                  src="src/img/img-hero-4.jpg"
+                  class="image-hero"
+                  alt="Characters from Big Time game"
+                />
+              </div>
+              <div class="slide slide--5">
+                <img
+                  src="src/img/img-hero-5.png"
+                  class="image-hero"
+                  alt="Ship from StarHeroes game"
+                />
+              </div>
+              <div class="dots__container">
+                <div class="dots"></div>
+              </div>
             </div>
-            <div class="slide slide--2">
-              <img
-                src="src/img/img-hero-2.png"
-                class="image-hero"
-                alt="Characters from Legends of Elysium game"
-              />
-            </div>
-            <div class="slide slide--3">
-              <img
-                src="src/img/img-hero-3.png"
-                class="image-hero"
-                alt="Characters from Momoguro game"
-              />
-            </div>
-            <div class="slide slide--4">
-              <img
-                src="src/img/img-hero-4.jpg"
-                class="image-hero"
-                alt="Characters from Big Time game"
-              />
-            </div>
-            <div class="slide slide--5">
-              <img
-                src="src/img/img-hero-5.png"
-                class="image-hero"
-                alt="Ship from StarHeroes game"
-              />
-            </div>
-            <div class="dots"></div>
           </div>
         </div>
+        <div class="swiper-container">
+          <div class="news__title">
+            <span>Latest news</span>
+          </div>
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div>
+                <img src="src/img/news-1.webp" alt="News 1" />
+              </div>
+              <div class="slide-content">
+                <p>Read Now</p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div>
+                <img src="src/img/news-2.webp" alt="News 2" />
+              </div>
+              <div class="slide-content">
+                <p>Read Now</p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div>
+                <img src="src/img/news-3.webp" alt="News 3" />
+              </div>
+              <div class="slide-content">
+                <p>Read Now</p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div>
+                <img src="src/img/news-4.webp" alt="News 4" />
+              </div>
+              <div class="slide-content">
+                <p>Read Now</p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+
+        <!-- <div class="news">
+          <div class="news__title">
+            <span>Latest news</span>
+          </div>
+          <div class="news__slider">
+            <div>BLA</div>
+            <div>AHA</div>
+            <div>SOL</div>
+            <div>LOL</div>
+          </div>
+        </div> -->
       </section>
       <footer>
         <div class="footer-container">
